manifests/base/compliance-demo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: compliance-api
  name: compliance-api
  namespace: default
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: compliance-api
  template:
    metadata:
      labels:
        app: compliance-api
    spec:
      containers:
      - image: cdssnc/compliance-api
        imagePullPolicy: Always
        name: compliance-api
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: compliance-checks
            mountPath: /checks
      volumes:
      - name: compliance-checks
        persistentVolumeClaim:
          claimName: checks-claim 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
