manifests/base/compliance-demo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: compliance-api
  name: compliance-api
spec:
  ports:
  - name: 3000-80
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: compliance-api
  type: ClusterIP
status:
  loadBalancer: {}
