manifests/base/compliance-demo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: compliance-api-demo
  name: compliance-api-demo
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: compliance-api-demo
  type: ClusterIP
status:
  loadBalancer: {}
