manifests/base/compliance-demo-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: compliance-ui
  name: compliance-ui
spec:
  ports:
  - name: 4000-4000
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: compliance-ui
  type: ClusterIP
status:
  loadBalancer: {}
