manifests/base/traefik-ingress-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/preserve-host: "false"
  name: traefik-ingress-ui
spec:
  rules:
  - http:
      paths:
      - path: /compliance/ui
        backend:
          serviceName: compliance-ui
          servicePort: 4000
